--- a/be/package.json
+++ b/be/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^24.10.0",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
 }
