fix: remove TypeScript support from migration script and update package.json scripts

--- a/be/package.json
+++ b/be/package.json
@@ -8,9 +8,9 @@
     "dev": "npm run build && node dist/be/index.js",
     "dev:watch": "nodemon --watch . --ext ts,js,json --ignore dist --exec \"npm run build && node dist/be/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "npx ts-node utils/migrate.js up",
-    "migrate:down": "npx ts-node utils/migrate.js down",
-    "migrate:status": "npx ts-node utils/migrate.js status",
+    "migrate": "node utils/migrate.js up",
+    "migrate:down": "node utils/migrate.js down",
+    "migrate:status": "node utils/migrate.js status",
     "validate": "npx ts-node scripts/validate-game-data.ts",
     "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
     "build": "npm run validate && npm run clean && tsc && npm run copy-data",
